--- a/week3/New styles.css
+++ b/week3/New styles.css
@@ -1,6 +1,6 @@
 #Shamika {
     font-family: Georgia;
-    text-align:center;font-size: 55px;font-
+    text-align:center;font-size: 55px;
 }
 h1{
     color:green;text-align: center;
@@ -19,7 +19,7 @@ p{
     font-size: 25px;
 }
 li{
-    font-size: 23px;
+    font-size: 23px;font-style: italic;font-weight: bold;
 }
 .once{
     font-weight: bold;font-size: 22px;
@@ -29,4 +29,7 @@ li{
 }
 img {
     float: left;
+}
+.BB{
+    color: blueviolet;
 }
