--- a/week4/pstyles.css
+++ b/week4/pstyles.css
@@ -20,6 +20,7 @@ h1{
     padding-top: 5px;
     font-size: 35px;
     margin-top: 0;
+    margin-bottom: 0;
 }
 .container{
     background-color:rgb(221, 210, 210);
@@ -54,11 +55,8 @@ a{
     font-weight: bold;
     color: rgb(51, 15, 136);
 }
-.menu li{
-   display:inline;
-}
+ 
 
-   
 
 
 
