--- a/week4/project2.css
+++ b/week4/project2.css
@@ -21,5 +21,32 @@ nav{
     color:black;
     padding:8px;
     text-decoration: none;
-
+}
+h1{
+    font-style: italic;
+    font-size: 55px;
+    margin-top: 10px;
+    padding:15px;
+    margin-left: 500px;
+   
+}
+.image{
+display:inline;
+padding:50px;
+margin-left: 180px;
+}
+p{
+    font-size: 20px;
+    margin-left: 20px;
+    font-style: piazzoll;
+    
+}
+a{
+    font-weight: bold;
+}
+table, th, td{
+    border: 20px;
+    text-align: center;
+    border-style: groove;
+   border-color: burlywood;
 }
