--- a/week4/project2.css
+++ b/week4/project2.css
@@ -9,7 +9,7 @@ nav{
     margin:0;
     padding:8px;
     height:21px;
-    background-color:pink;
+    background-color:goldenrod;
 }
 .menu li{
     display:inline;
@@ -27,13 +27,13 @@ h1{
     font-size: 55px;
     margin-top: 10px;
     padding:15px;
-    margin-left: 500px;
+    margin-left: 700px;
    
 }
 .image{
 display:inline;
 padding:50px;
-margin-left: 180px;
+margin-left: 480px;
 }
 p{
     font-size: 20px;
@@ -45,8 +45,21 @@ a{
     font-weight: bold;
 }
 table, th, td{
-    border: 20px;
+    border-collapse: collapse;
     text-align: center;
-    border-style: groove;
+    border-style: solid;
    border-color: burlywood;
+}
+th{
+    height: 50px;
+    background-color: goldenrod;
+}
+span{
+    font-size: 52px;
+    font-style:italic ;
+   margin-left: 380px;
+}
+span i{
+  margin:15px;
+  padding-right: 500px;
 }
