--- a/week5/Grid2.css
+++ b/week5/Grid2.css
@@ -1,54 +1,59 @@
 
 .grid-container{
     display: grid;
-    grid-template-columns:(1fr,1fr);
-    grid-auto-rows: minmax(200px,auto);
-    gap: 30px;
+    grid-template-columns:(1fr,1fr,1fr);
+    grid-auto-rows: minmax(100px,auto);
+        gap: 10px;
    
 
 }
 
 .box1{
     background-color:red;
-    grid-column: 1/-1;
+    height: 200px;
+    grid-column:1/-1;
     grid-row: 1;
     border:2px;
     padding:40px;
-    border-radius: 20px;
+    border-radius: 10px;
        
 }
 
 .box2{
     background-color:blue;
-    grid-column: 1/-1;
+    height: 300px;
+    grid-column: 1;
+    grid-row: 2;
+    border-radius: 10px;
+}
+
+
+.box4{
+    background-color:green;
+    height: 200px;
+    grid-column: 3/5;
     grid-row: 2;
     border:2px;
     padding:40px;
-    border-radius: 20px;
-}
-.box3{
-    background-color:green;
-    grid-column: 1/-1;
+    border-radius: 10px;
+} 
+.box5{
+    background-color:purple;
+    height: 200px;
+    grid-column:3;
     grid-row: 3;
     border:2px;
-    padding:40px;
-    border-radius: 20px;
-} 
-.box4{
-    background-color:purple;
-    grid-column: 1/-1;
-    grid-row: 4;
-    border:2px;
-    padding:40px;
-    border-radius: 20px;
+    padding:10px;
+    border-radius: 10px;
 }
-.box5{
-    background-color:yellow;
-    grid-column: 1/-1;
-    grid-row: 5;
+.box6{
+    background-color:purple;
+    grid-column: 4;
+    border-top: none;
+    grid-row: 3;
     border:2px;
-    padding:40px; 
-    border-radius: 20px; 
+    padding:10px;
+    border-radius: 10px;
 }
 
 
@@ -56,23 +61,32 @@
 
 @media only screen and (min-width: 768px){
     .box1{
-        grid-column: 1 / 4;
+        grid-column: 1 / 5;
         grid-row: 1;
     }
     .box2{
-        grid-column: 4/7;
-        grid-row: 1;
-    }
-    .box3{
         grid-column: 1/3;
-        grid-row: 2;
+        grid-row: span bottom;
+        
+        
+ {
+
+        }
+   .box3{
+            grid-column: 4/6;
+            grid-row: 3;     
     }
+    
     .box4{
-        grid-column: 3/7;
-        grid-row: 2;
+        grid-column: 3/5;
+        grid-row:3 ;
     }
     .box5{
-        grid-column: 1/7;
+        grid-column: 3/4;
+        grid-row: 3;
+    }
+    .box6{
+        grid-column: 5/6;
         grid-row: 3;
     }
    
