--- a/week6/Project3.css
+++ b/week6/Project3.css
@@ -3,25 +3,26 @@ ul {
     margin:0;
     padding:0;
     width: 100%;
-    height: 40px;
+    height: 60px;
     background-color: salmon;
 
 }
 li{
     display: inline-block;
     font-size: 20px;
-    padding: 5px;
+    padding: 15px;
+    
 }
 h1{
     font-size: 50px;
     font-style: italic;
     margin: 30px;
-    padding-left: 600px;
+    padding-left: 720px;
 }
 h2{
     font-size:30px;
     font-style: oblique;
-    padding-left: 250px;
+    padding-left: 350px;
     color: salmon;
     font-weight: bold;
 }
@@ -35,21 +36,30 @@ h3{
 }
 table{
     font-family: Arial, Helvetica, sans-serif;
-    border-top-style: initial;
+    border-collapse:collapse
     width: 100%;
     padding-top: 20px;
 }
+tr:nth-child(even){
+background-color: pink;
+} 
+
 td, th {
     text-align: left;
     padding: 10px;
     margin:5px ;
+    n-ninth
   }
   .flex-container > div {
     margin: 5px;
     padding: 10px;
     font-size: 20px;
   }
-  .imgage float {
-      border-radius: 200px 100px 200px 100px;
-      
+ img {
+     border-radius: 100%; 
+     padding-left: 140px; 
+  }
+  div :nth-child(even){
+    background-color:pink; 
+    width:915px;
   }
