--- a/week6/Project3.css
+++ b/week6/Project3.css
@@ -5,6 +5,7 @@ ul {
     width: 100%;
     height: 60px;
     background-color: salmon;
+    
 
 }
 li{
@@ -22,33 +23,32 @@ h1{
 h2{
     font-size:30px;
     font-style: oblique;
-    padding-left: 350px;
-    color: salmon;
+    padding-left: 380px;
+    color: black;
     font-weight: bold;
 }
 h3{
     font-size:30px;
     font-style: oblique;
-    padding-left: 250px;
-    color: salmon;
+    padding-left: 300px;
+    color: black;
     font-weight: bold;
 
 }
 table{
     font-family: Arial, Helvetica, sans-serif;
-    border-collapse:collapse
-    width: 100%;
+    width:100%;
     padding-top: 20px;
+    
 }
 tr:nth-child(even){
-background-color: pink;
+background-color: salmon;
 } 
 
 td, th {
     text-align: left;
     padding: 10px;
-    margin:5px ;
-    n-ninth
+    margin:5px;
   }
   .flex-container > div {
     margin: 5px;
@@ -60,6 +60,76 @@ td, th {
      padding-left: 140px; 
   }
   div :nth-child(even){
-    background-color:pink; 
+    background-color:salmon; 
     width:915px;
+    padding-bottom: 20px;
+   margin-bottom: 20px;
   }
+  h1,h2,h3,marquee {
+     font-family: 'Dancing Script', cursive;
+  }
+  .fa {
+    padding: 20px;
+    width: 30px;
+    text-align: center;
+    text-decoration: left;
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+    font-size: 100px;
+}
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+  }
+  
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  marquee{
+    font-size:50px ;
+    font-weight:bold;
+  }
+  .grid-container{
+    display: grid;
+    grid-template-columns: (1fr,1fr,auto);
+    grid-auto-rows: minmax(10px,auto);
+    gap: 20px;
+    font-style: oblique;
+    font-weight: bold;
+}
+.Monday{
+    grid-column: 1/-1;
+    grid-row: 1/1;
+    border:2px;
+    padding-left: 1000px;
+}
+.Tuesday{
+    grid-column: 1/-1;
+    grid-row: 2/2;
+    border:2px;
+    padding-left: 1000px;
+}
+.Wednesday{
+    grid-column: 1/-1;
+    grid-row: 3/3;
+    border:2px;
+    padding-left: 1000px;
+}
