--- a/week5/Grid2.css
+++ b/week5/Grid2.css
@@ -1,4 +1,3 @@
-
 .grid-container{
     display: grid;
     grid-template-columns:(1fr,1fr,1fr);
@@ -55,6 +54,15 @@
     padding:10px;
     border-radius: 10px;
 }
+.grid main{
+    background-color:purple;
+    grid-column: 4;
+    border-top: none;
+    grid-row: 3;
+    border:2px;
+    padding:10px;
+    border-radius: 10px;
+}
 
 
 
@@ -67,9 +75,8 @@
     .box2{
         grid-column: 1/3;
         grid-row: span bottom;
-        
-        
- {
+         
+    }
 
         }
    .box3{
@@ -89,4 +96,6 @@
         grid-column: 5/6;
         grid-row: 3;
     }
+   
+
    
