--- a/week6/project.css
+++ b/week6/project.css
@@ -33,12 +33,17 @@ body{
 .box3{
     padding: 25px;
     margin-right: 20px;
+    position: relative;
     text-align:center;
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Dancing Script', cursive;
-    text-align: center;   
-
+    font-weight: bolder;
+    text-align: center;
 } 
+img{
+  border-radius: 80%;
+  align-content: center; 
+}
 .box4{
   grid-column: 1/-1;
   grid-row: 4;
@@ -47,7 +52,12 @@ body{
   font-family: 'Dancing Script', cursive;
   font-size:30px;
 }
-
+.flex-container > div {
+  text-align: left;
+  margin: 5px;
+  padding: 10px;
+  font-size: 20px;
+}
 ul {
   list-style-type: square;
   margin:0;
@@ -60,13 +70,23 @@ li{
   font-size: 20px;
   padding: 15px;
 }
+
 h1{
   font-size: 50px;
   font-family: 'Dancing Script', cursive;
   text-align: center;
-  justify-content: center;
   
 }  
+h3{
+  text-align: left;
+  text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+}
+td, th {
+  text-align: left;
+  padding: 10px;
+  margin:5px;
+ 
+}
 
 .fa {
   padding: 10px;
