--- a/week6/project.css
+++ b/week6/project.css
@@ -1,11 +1,9 @@
 .grid-container{
   display:grid;
-  grid-template-columns: repeat(1fr,2fr,1fr auto);
+  grid-template-columns: repeat(1fr,1fr,1fr auto);
   grid-auto-rows: minmax(200px,auto);
   gap: 10px;
   padding:5px;
-  
-  
 }
 body{
   background-color:white;
@@ -25,37 +23,38 @@ body{
 }
 .box2{
   grid-column: 1/-1;
-  grid-row: 2/2;
+  grid-row: 2;
   border:20px;
-  padding:20px;
+  padding:10px;
     
 }
 .box3{
-    padding: 25px;
+    padding: 15px;
     margin-right: 20px;
     position: relative;
     text-align:center;
-    font-size: 25px;
+    font-size: 15px;
     font-family: 'Dancing Script', cursive;
     font-weight: bolder;
     text-align: center;
 } 
 img{
-  border-radius: 80%;
-  align-content: center; 
+  align-content:center;
+    padding-left: 200px;
+    grid-column: 1/-1;
 }
 .box4{
   grid-column: 1/-1;
-  grid-row: 4;
-  border:20px;
-  padding:20px;
+  grid-row: 3;
+  border:10px;
+  padding:10px;
   font-family: 'Dancing Script', cursive;
-  font-size:30px;
+  font-size:20px;
 }
 .flex-container > div {
   text-align: left;
   margin: 5px;
-  padding: 10px;
+  padding: 5px;
   font-size: 20px;
 }
 ul {
@@ -63,7 +62,7 @@ ul {
   margin:0;
   padding:0;
   width: 100%;
-  height: 60px;
+  height: 50px;
 }
 li{
   display: inline-block;
@@ -72,7 +71,7 @@ li{
 }
 
 h1{
-  font-size: 50px;
+  font-size: 30px;
   font-family: 'Dancing Script', cursive;
   text-align: center;
   
@@ -81,16 +80,21 @@ h3{
   text-align: left;
   text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
 }
-td, th {
+
+table,td, th {
   text-align: left;
-  padding: 10px;
+  padding: 5px;
   margin:5px;
+  font-size: 15px;
  
+}
+td{
+  font-size: 20px;
 }
 
 .fa {
   padding: 10px;
-  margin-top: 50px;
+  margin-top: 30px;
   width: 30px;
   text-align: center;
   text-decoration: center;
@@ -127,6 +131,7 @@ td, th {
 marquee{
   font-size:50px ;
   font-weight:bold;
+
 }
 
 @media only screen and (min-width: 768px){
