--- a/week6/project.css
+++ b/week6/project.css
@@ -1,62 +1,86 @@
 .grid-container{
   display:grid;
   grid-template-columns: repeat(1fr,1fr,1fr auto);
-  grid-auto-rows: minmax(200px,auto);
+  grid-auto-rows: minmax(auto);
   gap: 10px;
-  padding:5px;
+  background-size: contain;
+}
+header{
+  font-size: 20px;
+  font-style: italic;
+  align-content: center;
+  color: hsl(249, 100%, 37%);
+  font-weight: bolder;
+  background-color: rgb(243, 169, 72);
+ width: 100%;
+}
+img{
+ 
+   box-shadow: grey;
+   align position: center;
+   background-size: contain;
+   border: solid red;
+      
 }
 body{
-  background-color:white;
+  background-color: grey;
+  
+}
+h1{
+  font-size: 30px;
+  font-family: 'Dancing Script', cursive;
+  width: 100%;
+  background-color:rgb(243, 169, 72);
+  text-align: center;
+  margin:5px;
+  padding: 0;
+  
+}  
+h3{
+  text-align:center;
+  text-shadow: 0 0 3px #FF0000, 0 0 5px #ad2056;
 }
 
   h2{
   font-family:'Dancing Script', cursive;
-  font-size: 30px;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 0;
+  text-align: center;
 }
+h4{
+  font-family:'Dancing Script', cursive;
+  font-size: 40px;
+  text-align:  center;
+  padding-top: 20px;
+}
+
  
 .box1{
   position: relative;
   grid-column: 1/-1;
   grid-row: 1;
   border:5px;
+  margin: auto; 
      
 }
-.box2{
+.box2 {
   grid-column: 1/-1;
   grid-row: 2;
-  border:20px;
-  padding:10px;
-    
+  align-content: center; 
+  border:10px;
+  padding:10px;  
+  margin: auto;   
 }
 .box3{
-    padding: 15px;
-    margin-right: 20px;
-    position: relative;
     text-align:center;
     font-size: 15px;
     font-family: 'Dancing Script', cursive;
-    font-weight: bolder;
-    text-align: center;
+    justify-content: center;
+    
 } 
-img{
-  align-content:center;
-    padding-left: 200px;
-    grid-column: 1/-1;
-}
-.box4{
-  grid-column: 1/-1;
-  grid-row: 3;
-  border:10px;
-  padding:10px;
-  font-family: 'Dancing Script', cursive;
-  font-size:20px;
-}
-.flex-container > div {
-  text-align: left;
-  margin: 5px;
-  padding: 5px;
-  font-size: 20px;
-}
+
+
 ul {
   list-style-type: square;
   margin:0;
@@ -70,33 +94,27 @@ li{
   padding: 15px;
 }
 
-h1{
-  font-size: 30px;
-  font-family: 'Dancing Script', cursive;
-  text-align: center;
-  
-}  
-h3{
-  text-align: left;
-  text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
-}
-
 table,td, th {
-  text-align: left;
   padding: 5px;
   margin:5px;
   font-size: 15px;
+  border: 2px solid black;
+  border-collapse: collapse;
+  align: center;
  
 }
 td{
   font-size: 20px;
+}
+footer{
+  text-align:center;
 }
 
 .fa {
   padding: 10px;
   margin-top: 30px;
   width: 30px;
-  text-align: center;
+  text-align:center;
   text-decoration: center;
 }
 .fa-facebook{
@@ -129,24 +147,26 @@ td{
   color: white;
 }
 marquee{
-  font-size:50px ;
+  font-size:30px ;
   font-weight:bold;
-
+  width: 100%;
 }
 
-@media only screen and (min-width: 768px){
- body{
-   background-color: gray; 
- }
+@media screen (max-width: 767px) {
+
+}  
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
+}
+.navbar a {
+  float: left;
+  text-align: center;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-@media only screen and (min-width: 1000px){
-  body{
-    background-color: gold;
-  }
-}
-@media only screen and (min-width: 1150px){
-  body{
-    background-color:pink;
-  }
-}
+  
