--- a/week6/project.css
+++ b/week6/project.css
@@ -14,23 +14,18 @@ header{
   background-color: rgb(243, 169, 72);
  width: 100%;
 }
+
 img{
- 
-   box-shadow: grey;
-   align position: center;
-   background-size: contain;
-   border: solid red;
-      
+  display:block;
+  margin: auto;
+   border: solid rgb(95, 6, 136);
 }
-body{
-  background-color: grey;
-  
-}
+
 h1{
   font-size: 30px;
   font-family: 'Dancing Script', cursive;
   width: 100%;
-  background-color:rgb(243, 169, 72);
+  background-color:rgb(156, 94, 238);
   text-align: center;
   margin:5px;
   padding: 0;
@@ -38,7 +33,7 @@ h1{
 }  
 h3{
   text-align:center;
-  text-shadow: 0 0 3px #FF0000, 0 0 5px #ad2056;
+  text-shadow: 0 0 3px #750e9e, 0 0 5px #ad2056;
 }
 
   h2{
@@ -54,16 +49,7 @@ h4{
   text-align:  center;
   padding-top: 20px;
 }
-
  
-.box1{
-  position: relative;
-  grid-column: 1/-1;
-  grid-row: 1;
-  border:5px;
-  margin: auto; 
-     
-}
 .box2 {
   grid-column: 1/-1;
   grid-row: 2;
@@ -75,11 +61,12 @@ h4{
 .box3{
     text-align:center;
     font-size: 15px;
-    font-family: 'Dancing Script', cursive;
     justify-content: center;
     
 } 
-
+p{
+  font-family: 'Dancing Script', cursive;
+}
 
 ul {
   list-style-type: square;
@@ -100,8 +87,11 @@ table,td, th {
   font-size: 15px;
   border: 2px solid black;
   border-collapse: collapse;
-  align: center;
  
+ 
+}
+table{
+  margin: auto;
 }
 td{
   font-size: 20px;
@@ -152,21 +142,58 @@ marquee{
   width: 100%;
 }
 
-@media screen (max-width: 767px) {
-
-}  
-.navbar {
-  width: 100%;
-  background-color: #555;
-  overflow: auto;
+@media only screen and (max-width: 767px) {
+  body {
+    background-color: lightblue;
+    font-size: 15px;
+    justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  img{
+    border-radius: 20px;
+    margin-left: auto;
+    border-left: auto;
+  }
+  p{
+    font-family: cursive;
+  }
+  h1{
+    font-size: 20px;
+  }
+  nav{
+    font-size: 10px;
+  }
+  .shrink{
+    max-width: 100%;
+    height: auto;
+  }
 }
-.navbar a {
-  float: left;
-  text-align: center;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
+@media only screen and (min-width:768px){
+  body{
+    background-color: peachpuff;
+    font-size: 17px;
+  }
+  p{
+    color: red;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
+  .shrink{
+  min-width: 700px;
+  }
 }
-
-  
+@media only screen and (min-width:1138px){
+  body{
+    background-color:whitesmoke;
+    background-size: contain;
+  }
+  p{
+    color: black;
+    font-style: italic;
+    font-weight: bold;
+  }
+  .shrink{
+    min-width: 900px;
+  }
+}
