--- a/week7/Capstone.css
+++ b/week7/Capstone.css
@@ -9,6 +9,10 @@ h2{
     text-align: center;
     padding-top: 20px;
     }
+
+    img{
+        border-radius: 15px;
+    }
 nav{
     height: 30px;
     text-align: left;
@@ -28,21 +32,39 @@ div.navbar{
     background-color: rgb(233, 167, 45);
     overflow: auto;   
 }
-
+p{
+    border-bottom: solid rgb(233, 167, 45);
+    border-top: solid rgb(233, 167, 45);
+    border-left: solid rgb(233, 167, 45);
+    border-right:  solid rgb(233, 167, 45);
+ 
+}
 
 body{
     background-color: rgb(172, 163, 163);
+    border: 3px solid black;
+    margin: 3px;
 }
 .grid-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(1,1fr);
     grid-auto-rows: minmax(200px,auto);
     gap: 10px;
 }
-
-
-
-
+.box1{
+    font-family: cursive;
+    font-size: 15px;
+    padding: 5px;
+    text-align: center;
+}
+.box2{
+    grid-column: 1/-1;
+    grid-row: 1/2; 
+    
+}
+.a{
+    word-wrap: break-word;
+}
 
 
 
