--- a/week7/Capstone.css
+++ b/week7/Capstone.css
@@ -9,35 +9,47 @@ h2{
     text-align: center;
     padding-top: 20px;
     }
-
-    img{
-        border-radius: 15px;
+    h3{
+      font-weight: bold;
+    }
+.box3{
+  background-color: rgb(233, 167, 45);
+  grid-column: 1/-1;
+  grid-row: 3;
+  border:2px;
+  padding:20px;
+  gap: 5px;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+img{
+     border-radius: 15px;
     }
 nav{
-    height: 30px;
-    text-align: left;
-    width: 100%;
+  height: 35px;
+  text-align: left;
+  width: 100%;
+  background-color: rgb(233, 167, 45);
 }
-
-.navbar a {
-    float: left;
+  a {
     text-align: center;
     padding: 5px;
     color: black;
     text-decoration: none;
     font-size: 17px;
   }
-div.navbar{
-    width: 100%;
-    background-color: rgb(233, 167, 45);
-    overflow: auto;   
+ img{
+   border: 10px;
+   box-shadow: rgb(233, 167, 45);
 }
-p{
-    border-bottom: solid rgb(233, 167, 45);
-    border-top: solid rgb(233, 167, 45);
-    border-left: solid rgb(233, 167, 45);
-    border-right:  solid rgb(233, 167, 45);
- 
+.download{
+height: 100%;
+width: 100%;
+
 }
 
 body{
@@ -51,29 +63,11 @@ body{
     grid-auto-rows: minmax(200px,auto);
     gap: 10px;
 }
-.box1{
-    font-family: cursive;
-    font-size: 15px;
-    padding: 5px;
-    text-align: center;
-}
+
 .box2{
     grid-column: 1/-1;
-    grid-row: 1/2; 
-    
+    grid-row: 1/2;   
 }
-.a{
-    word-wrap: break-word;
-}
-
-
-
-
-
-
-
-
-
 
 
 .fa {
@@ -116,4 +110,66 @@ body{
     font-size:30px ;
     font-weight:bold;
     width: 100%;
+  }
+  @media only screen and (max-width: 767px) {
+    body {
+      background-color: rgb(228, 241, 239);
+      font-size: 15px;
+      justify-content: center;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    img{
+      border-radius: 20px;
+      margin-left: auto;
+      border-left: auto;
+    }
+    p{
+      font-family: cursive;
+    }
+    h1{
+      font-size: 20px;
+    }
+    nav{
+      font-size: 10px;
+    }
+    .shrink{
+      max-width: 100%;
+      height: auto;
+    }
+  }
+    
+  @media only screen and (min-width:768px){
+    body{
+      background-color: peachpuff;
+      font-size: 17px;
+    }
+    p{
+      color: red;
+      font-weight: bold;
+      font-family: sans-serif;
+    }
+    .shrink{
+    min-width: 700px;
+    }
+  }
+  @media only screen and (min-width:1138px){
+    body{
+      background-color:whitesmoke;
+      background-size: cover;
+    }
+    nav{
+      height: 30px;
+      text-align: left;
+      width: 100%;
+   
+  }
+    p{
+      color: black;
+      font-style: italic;
+      font-weight: bold;
+    }
+    .shrink{
+      min-width: 900px;
+    }
   }
