--- a/week7/home.css
+++ b/week7/home.css
@@ -8,7 +8,6 @@ h2{
     font-family: fantasy;
     text-align: center;
     padding-top: 20px;
-   
     }
     h3{
       font-weight: bold;
@@ -18,7 +17,7 @@ h2{
   grid-column: 1/-1;
   grid-row: 3;
   border:2px;
-  padding:50px;
+  padding:20px;
   gap: 5px;
 }
 .centered {
@@ -41,7 +40,7 @@ nav{
     padding: 5px;
     color: black;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 17px;
   }
  img{
    border: 10px;
@@ -54,6 +53,7 @@ width: 100%;
 }
 
 body{
+    background-color: rgb(172, 163, 163);
     border: 3px solid black;
     margin: 3px;
 }
@@ -66,9 +66,7 @@ body{
 
 .box2{
     grid-column: 1/-1;
-    grid-row: 1/2;  
-    
-    font-size: 20px;
+    grid-row: 1/2;   
 }
 
 
@@ -115,7 +113,7 @@ body{
   }
   @media only screen and (max-width: 767px) {
     body {
-      background-color: whitesmoke;
+      background-color: rgb(228, 241, 239);
       font-size: 15px;
       justify-content: center;
       width: 100%;
@@ -126,11 +124,11 @@ body{
       margin-left: auto;
       border-left: auto;
     }
-    
+    p{
+      font-family: cursive;
+    }
     h1{
       font-size: 20px;
-      height: 20px;
-      background-color: white;
     }
     nav{
       font-size: 10px;
@@ -143,20 +141,35 @@ body{
     
   @media only screen and (min-width:768px){
     body{
-      background-color: rgb(235, 220, 192);
-      font-size: 20px;
+      background-color: peachpuff;
+      font-size: 17px;
     }
     p{
-      color: rgba(75, 16, 16, 0.623);
-      font-family:'Kaushan';
+      color: red;
       font-weight: bold;
-    }
-    .box2{
-      color:rgba(75, 16, 16, 0.623) ;
-      font-weight: bold;
+      font-family: sans-serif;
     }
     .shrink{
     min-width: 700px;
     }
   }
-  
+  @media only screen and (min-width:1138px){
+    body{
+      background-color:whitesmoke;
+      background-size: cover;
+    }
+    nav{
+      height: 30px;
+      text-align: left;
+      width: 100%;
+   
+  }
+    p{
+      color: black;
+      font-style: italic;
+      font-weight: bold;
+    }
+    .shrink{
+      min-width: 900px;
+    }
+  }
