--- a/week7/Capstone.css
+++ b/week7/Capstone.css
@@ -8,19 +8,28 @@ h2{
     font-family: fantasy;
     text-align: center;
     padding-top: 20px;
+  
    
     }
     h3{
       font-weight: bold;
     }
 .box3{
-  background-color: rgb(233, 167, 45);
-  grid-column: 1/-1;
-  grid-row: 3;
-  border:2px;
-  padding:50px;
-  gap: 5px;
+
+  width: 100px;
+  height: 100px;
+  background: rgb(233, 167, 45);
+  transition-property: width;
+  transition-duration: 5s;
+  transition-timing-function: linear;
+  transition-delay: 1s;
 }
+div:hover {
+  width: 100%;
+}
+
+
+ 
 .centered {
   position: absolute;
   top: 50%;
