--- a/week8/reflect.css
+++ b/week8/reflect.css
@@ -45,11 +45,11 @@ h6{
 h7{
     font-size: 50px;
     font-family: Arial;
-    grid-column: 1/3;
-    grid-row: 6;
+    grid-column: 2/4;
+    grid-row: 5;
     font-family: 'Satisfy', cursive;
-    padding-top: 200px;
 }
+
 h8{
     font-size: 50px;
     font-family: Arial;
@@ -57,9 +57,20 @@ h8{
     grid-row: 7;
     font-family: 'Satisfy', cursive;
     padding-top: 300px;
-    }   
+} 
+h9{
+    font-size: 20px;
+    font-family: 'Satisfy', cursive; 
+}  
 
-
+h10{
+    font-size: 30px;
+    font-family: Arial;
+    grid-column: 1/6;
+    grid-row: 7;
+    font-family: 'Satisfy', cursive;
+    padding-top: 300px; 
+}
 body{
     background-color: peru;
 }
